ci: revert to publish-profile with webapps-deploy@v2 to avoid SP requirement